# water_meter_tf

./: .gitignore  partitions.csv  sdkconfig  sdkconfig.old
components/edge-impulse/: CMakeLists.txt
components/edge-impulse/model-parameters/: model_metadata.h  model_variables.h
components/edge-impulse/tflite-model/: tflite_learn_842305_3.h  tflite_learn_842305_3.tflite
main/: CMakeLists.txt  config.h  main.cpp
main/cam/: camera.cpp  camera.hpp
main/sd/: sd_card.cpp  sd_card.hpp
main/server/: server.cpp  server.hpp  server_html.h
